# mobile_platforms_ROS

./: CMakeLists.txt  package.xml  setup.py
include/path_planner/: Planner.py  planner.py  planner_constants.py
include/vision/: Fileds_objects.py  MarkersAnalizer.py
include/visualize_utils/: Visualizer.py
launch/: start.launch
msg/: Angle.msg  Aruco.msg  FieldObjects.msg  MarkerCorners.msg  MarkerData.msg  ObstacleData.msg  Path.msg  RobotData.msg
nodes/: aruco_detector_node.py  camera_node.py  markers_analizer_node.py  path_planner_node.py
src/: aruco_detector_node.py  camera_node.py  markers_analizer_node.py  path_planner_node.py  visualizer_node.py  vrep_communicator_node.py
src/mqtt/: mqtt_utils.py
src/path_planner/: Planner.py  planner_constants.py
src/vision/: Fileds_objects.py  MarkersAnalizer.py  vision_constants.py
src/visualize_utils/: Visualizer.py
src/vrep_communicator/: VrepCommunicator.py  vrep_constants.py
